--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ablemansuccess.co",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "jspdf": "^2.5.2",
     "nodemailer": "^6.9.16",
